<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/card_view_card_padding"
        android:background="@color/background_color"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        tools:context=".DetailActivity">

    <android.support.v7.widget.CardView
            android:id="@+id/card_detail_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardCornerRadius="@dimen/card_view_card_border_radius"
            card_view:cardElevation="@dimen/card_view_card_border_radius"
            card_view:cardUseCompatPadding="true"
    >

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/card_detail_image"
                    android:layout_width="@dimen/detail_card_image_size"
                    android:layout_height="@dimen/detail_card_image_size"
                    android:layout_marginTop="@dimen/detail_card_image_margin_top"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    tools:src="@drawable/man"
            />

            <TextView
                    android:id="@+id/card_detail_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/card_detail_image"
                    android:layout_centerHorizontal="true"
                    android:textSize="@dimen/detail_card_texr_big_size"
                    tools:text="@string/card_view_name"
            />

            <RatingBar
                    android:id="@+id/card_detail_ratings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:stepSize="1.0"
                    android:layout_below="@id/card_detail_name"
                    android:layout_centerHorizontal="true"
            />
        </RelativeLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
            android:id="@+id/card_detail_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardCornerRadius="@dimen/card_view_card_border_radius"
            card_view:cardElevation="@dimen/card_view_card_border_radius"
            card_view:cardUseCompatPadding="true"
    >

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/card_detail_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="@dimen/detail_card_title_margin"
                    android:textSize="@dimen/detail_card_texr_big_size"
                    android:text="@string/card_detail_title_placeholder"
            />
            <View
                    android:layout_below="@id/card_detail_title"
                    android:layout_width="fill_parent"
                    android:background="@android:color/darker_gray"
                    android:layout_height="@dimen/detail_card_separator_title_height"/>

            <TextView
                    android:id="@+id/card_detail_address_placeholder"
                    android:layout_below="@id/card_detail_title"
                    android:layout_alignParentStart="true"
                    android:layout_margin="@dimen/card_view_text_small_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/card_view_text_size_big"
                    android:text="@string/card_detail_address_placeholder"
            />

            <TextView
                    android:id="@+id/card_detail_address"
                    android:layout_below="@id/card_detail_title"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="@dimen/card_view_text_small_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/card_view_text_size_big"
                    tools:text="@string/card_view_address"
            />

            <View
                    android:layout_below="@id/card_detail_address"
                    android:layout_width="fill_parent"
                    android:background="@android:color/darker_gray"
                    android:layout_height="@dimen/detail_card_separator_content_height"/>

            <TextView
                    android:id="@+id/card_detail_phone_placeholder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_view_text_small_margin"
                    android:layout_below="@+id/card_detail_address_placeholder"
                    android:layout_alignParentStart="true"
                    android:textSize="@dimen/card_view_text_size_big"
                    android:text="@string/card_detail_phone_placeholder"
            />

            <TextView
                    android:id="@+id/card_detail_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_view_text_small_margin"
                    android:layout_below="@+id/card_detail_address"
                    android:layout_alignParentEnd="true"
                    android:textSize="@dimen/card_view_text_size_big"
                    tools:text="@string/card_view_phone"
            />

            <View
                    android:layout_below="@id/card_detail_phone"
                    android:layout_width="fill_parent"
                    android:background="@android:color/darker_gray"
                    android:layout_height="@dimen/detail_card_separator_content_height"/>

            <TextView
                    android:id="@+id/card_detail_email_placeholder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_view_text_small_margin"
                    android:layout_below="@+id/card_detail_phone_placeholder"
                    android:layout_alignParentStart="true"
                    android:textSize="@dimen/card_view_text_size_big"
                    android:text="@string/card_detail_email_placeholder"
            />

            <TextView
                    android:id="@+id/card_detail_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_view_text_small_margin"
                    android:layout_below="@+id/card_detail_phone"
                    android:layout_alignParentEnd="true"
                    android:textSize="@dimen/card_view_text_size_big"
                    tools:text="@string/card_view_email"
            />

            <View
                    android:layout_below="@id/card_detail_email"
                    android:layout_width="fill_parent"
                    android:background="@android:color/darker_gray"
                    android:layout_height="@dimen/detail_card_separator_title_height"/>

            <View
                    android:layout_below="@id/card_detail_email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/detail_card_footer_height"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>