<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              xmlns:card_view="http://schemas.android.com/apk/res-auto"
              android:paddingStart="@dimen/card_view_card_padding"
              android:paddingEnd="@dimen/card_view_card_padding"
              android:background="@color/background_color"
              xmlns:tools="http://schemas.android.com/tools"
>

    <android.support.v7.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardCornerRadius="@dimen/card_view_card_border_radius"
            card_view:cardElevation="@dimen/card_view_card_border_radius"
            card_view:cardUseCompatPadding="true"
    >

        <android.support.constraint.ConstraintLayout
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/card_view_card_padding_inside"
        >

            <ImageView
                    android:id="@+id/image"
                    android:layout_width="78dp"
                    android:layout_height="@dimen/card_view_image_size"
                    android:contentDescription="@string/card_view_image"
                    android:layout_marginStart="8dp"
                    card_view:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="8dp"
                    card_view:layout_constraintTop_toTopOf="parent"/>

            <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/card_view_text_size_big"
                    tools:text="@string/card_view_name"
                    app:layout_constraintTop_toTopOf="@+id/image"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>

            <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/card_view_text_size_big"
                    tools:text="@string/card_view_address"
                    android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@+id/name"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/name"
                    app:layout_constraintHorizontal_bias="0.0"/>

            <RatingBar
                    android:id="@+id/ratings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:stepSize="1.0"
                    style="?android:attr/ratingBarStyleSmall"

                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/image" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/card_view_text_size_small"
                    tools:text="@string/card_view_phone"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/image"
                    app:layout_constraintStart_toStartOf="@+id/address"/>


            <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/card_view_text_size_small"
                    tools:text="@string/card_view_email"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/image"/>


        </android.support.constraint.ConstraintLayout>

        <!--
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/card_view_card_padding_inside" >

            <ImageView
                    android:id="@+id/image"
                    android:layout_width="@dimen/card_view_image_size"
                    android:layout_height="@dimen/card_view_image_size"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:contentDescription="@string/card_view_image"

            />

            <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/card_view_text_size_big"
                    tools:text="@string/card_view_name"
                    android:layout_centerHorizontal="true"
            />

            <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/card_view_text_size_big"
                    tools:text="@string/card_view_address"
                    android:layout_centerHorizontal="true"
                    android:layout_alignStart="@+id/name"
                    android:layout_below="@+id/name"
            />


            <RatingBar
                    android:id="@+id/ratings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/phone"
                    android:layout_alignStart="@+id/image"
                    android:numStars="5"
                    android:stepSize="1.0"
                    style="?android:attr/ratingBarStyleSmall"

            />

            <TextView
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/card_view_text_size_small"
                    tools:text="@string/card_view_phone"
                    android:layout_marginTop="@dimen/card_view_text_small_margin"
                    android:layout_alignStart="@+id/name"
                    android:layout_below="@+id/image"
            />

            <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/card_view_text_size_small"
                    tools:text="@string/card_view_email"
                    android:layout_marginTop="@dimen/card_view_text_small_margin"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/image"
            />


        </RelativeLayout>
        -->

    </android.support.v7.widget.CardView>
</LinearLayout>